--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+body, html, #root {
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  backgroundColor: #FBFBFB;
 }
